@@ -22,7 +22,7 @@ import com.winterhavenmc.roadblock.highlights.HighlightStyle;
 import com.winterhavenmc.roadblock.messages.Macro;
 import com.winterhavenmc.roadblock.messages.MessageId;
 import com.winterhavenmc.roadblock.sounds.SoundId;
-
+import com.winterhavenmc.roadblock.util.Config;
 import org.bukkit.Location;
 import org.bukkit.command.CommandSender;
 import org.bukkit.entity.Player;
@@ -35,8 +35,8 @@ import java.util.Objects;
 /**
  * A class that implements the show subcommand
  */
-final class ShowSubcommand extends AbstrtactSubcommand {
-
+final class ShowSubcommand extends AbstrtactSubcommand
+{
 	// reference to plugin main class
 	private final PluginMain plugin;
 
@@ -46,7 +46,8 @@ final class ShowSubcommand extends AbstrtactSubcommand {
 	 *
 	 * @param plugin reference to the plugin main class
 	 */
-	ShowSubcommand(final PluginMain plugin) {
+	ShowSubcommand(final PluginMain plugin)
+	{
 		this.plugin = Objects.requireNonNull(plugin);
 		this.name = "show";
 		this.usageString = "/roadblock show <distance>";
@@ -57,40 +58,46 @@ final class ShowSubcommand extends AbstrtactSubcommand {
 
 
 	@Override
-	public boolean onCommand(final CommandSender sender, final List<String> argsList) {
-
+	public boolean onCommand(final CommandSender sender, final List<String> argsList)
+	{
 		// sender must be player
-		if (!(sender instanceof final Player player)) {
-			plugin.messageBuilder.build(sender, MessageId.COMMAND_FAIL_CONSOLE).send();
+		if (!(sender instanceof final Player player))
+		{
+			plugin.messageBuilder.compose(sender, MessageId.COMMAND_FAIL_CONSOLE).send();
 			return true;
 		}
 
 		// check player permissions
-		if (!player.hasPermission(permissionNode)) {
-			plugin.messageBuilder.build(sender, MessageId.COMMAND_FAIL_SHOW_PERMISSION).send();
+		if (!player.hasPermission(permissionNode))
+		{
+			plugin.messageBuilder.compose(sender, MessageId.COMMAND_FAIL_SHOW_PERMISSION).send();
 			plugin.soundConfig.playSound(player, SoundId.COMMAND_FAIL);
 			return true;
 		}
 
 		// check max arguments
-		if (argsList.size() > getMaxArgs()) {
-			plugin.messageBuilder.build(sender, MessageId.COMMAND_FAIL_ARGS_COUNT_OVER).send();
+		if (argsList.size() > getMaxArgs())
+		{
+			plugin.messageBuilder.compose(sender, MessageId.COMMAND_FAIL_ARGS_COUNT_OVER).send();
 			plugin.soundConfig.playSound(sender, SoundId.COMMAND_FAIL);
 			displayUsage(sender);
 			return true;
 		}
 
 		// get show distance from config
-		int distance = plugin.getConfig().getInt("show-distance");
+		int distance = Config.SHOW_DISTANCE.getInt(plugin.getConfig());
 
 		// if argument passed, try to parse string to int
-		if (argsList.size() == 1) {
-			try {
-				distance = Integer.parseInt(argsList.get(0));
+		if (argsList.size() == 1)
+		{
+			try
+			{
+				distance = Integer.parseInt(argsList.getFirst());
 			}
-			catch (NumberFormatException nfe) {
+			catch (NumberFormatException nfe)
+			{
 				// send player integer parse error message and return
-				plugin.messageBuilder.build(sender, MessageId.COMMAND_FAIL_SET_INVALID_INTEGER).send();
+				plugin.messageBuilder.compose(sender, MessageId.COMMAND_FAIL_SET_INVALID_INTEGER).send();
 				plugin.soundConfig.playSound(sender, SoundId.COMMAND_FAIL);
 
 				// display usage message for player
@@ -106,10 +113,11 @@ final class ShowSubcommand extends AbstrtactSubcommand {
 		plugin.highlightManager.highlightBlocks(player, locations, HighlightStyle.PROTECT);
 
 		// send player success message
-		plugin.messageBuilder.build(player, MessageId.COMMAND_SUCCESS_SHOW).setMacro(Macro.QUANTITY, locations.size()).send();
+		plugin.messageBuilder.compose(player, MessageId.COMMAND_SUCCESS_SHOW).setMacro(Macro.QUANTITY, locations.size()).send();
 
 		// if any blocks highlighted, play sound
-		if (locations.size() > 0) {
+		if (!locations.isEmpty())
+		{
 			plugin.soundConfig.playSound(player, SoundId.COMMAND_SUCCESS_SHOW);
 		}
 
